--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-This chapter shows that the implementation works as intended through the use of unit tests and custom benchmarks. These benchmarks have been designed to stress the garbage collector in an attempt to expose any faults in the implementation. We will see that unit testing was employed to test each component in isolation before seeing the benchmarks which test the garbage collector as a whole unit. Finally, the performance of the garbage collector is discussed which leads to ideas about future work or alternative design patterns for C programs. I will not be comparing the performance against the Boehm garbage collector, the reasoning behind this is that their solution is a more mature piece of software with many platform-specific enhancements which would be hard to convicingly beat in the given timescale.
+This chapter shows that the implementation works as intended through the use of unit tests and custom benchmarks. These benchmarks have been designed to stress the garbage collector in an attempt to expose any faults in the implementation. We will see that unit testing was employed to test each component in isolation before seeing the benchmarks which test the garbage collector as a whole unit. Finally, the performance of the garbage collector is discussed which leads to ideas about future work or alternative design patterns for C programs. I will not be comparing the performance against the Boehm garbage collector, the reasoning behind this is that their solution is a more mature piece of software with many platform-specific enhancements which would be hard to convincingly beat in the given timescale. Appendix \ref{appendix:evaluation} contains source code for the benchmarks, unit tests and Matlab scripts.
 
 \section{Overall Results} \label{sec:overallresults}
 
