Updates from ShareLaTeX

--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -12,7 +12,7 @@ In addition to developing a successful garbage collector, I have also progressed
 
 \section{Lessons Learnt}
 
-Initially, adding garbage collection to manual memory managed language like C seemed unusual to me. I was not only unsure about the technical aspects of this but also why someone would want to do this. This highlighted to me the importance of an extensive planning period. While diving head first into programming is often the desire, if I had done this then the project would have found itself in difficulty. I have realised why adding garbage collection in this way can be useful, especially when working in teams with different backgrounds and experience.
+Initially, adding garbage collection to manual memory managed language like C seemed unusual to me. I was not only unsure about the technical aspects of this but also why someone would want to do this. This highlighted to me the importance of an extensive planning period. While diving head first into programming is often the desire, if I had done this then the project would have encountered more problems. I have realised why adding garbage collection in this way can be useful, especially when working in teams with different backgrounds and experience.
 
 \section{Future Work} \label{sec:futurework}
 
