--- a/refs.bib
+++ b/refs.bib
@@ -1,59 +1,89 @@
 @article{generational,
-title="A real-time garbage collector based on the lifetimes of objects",
-author="Lieberman, H. and Hewitt, C.",
-year="1983"}
+  title={A real-time garbage collector based on the lifetimes of objects},
+  author={Lieberman, Henry and Hewitt, Carl},
+  journal={Communications of the ACM},
+  volume={26},
+  number={6},
+  pages={419--429},
+  year={1983},
+  publisher={ACM}
+}
 
-@ARTICLE{fragmentation,
-TITLE="The Memory Fragmentation Problem: Solved?",
-AUTHOR="Johnstone, M.S. and Wilson, P.R",
-YEAR="1998"}
+@inproceedings{fragmentation,
+title={The memory fragmentation problem: solved?},
+  author={Johnstone, Mark S and Wilson, Paul R},
+  booktitle={Acm Sigplan Notices},
+  volume={34},
+  pages={26--36},
+  year={1998},
+  organization={ACM}
+}
 
 @ARTICLE{conservative,
-TITLE="Garbage collection in an uncooperative environment",
-AUTHOR="Boehm, H.J. and Weiser, M.",
-YEAR="1988"}
+title={Garbage collection in an uncooperative environment},
+  author={Boehm, Hans-Juergen and Weiser, Mark},
+  journal={Software: Practice and Experience},
+  volume={18},
+  number={9},
+  pages={807--820},
+  year={1988},
+  publisher={Wiley Online Library}
+}
 
 @ARTICLE{overview,
-TITLE="Garbage collection of linked data structures",
-AUTHOR="Cohen, J.",
-YEAR="1981",
-JOURNAL="ACM Computing Surveys",
-VOLUME="13",
-ISSUE="3"}
+title={Garbage collection of linked data structures},
+  author={Cohen, Jacques},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={13},
+  number={3},
+  pages={341--367},
+  year={1981},
+  publisher={ACM}
+}
 
 @ARTICLE{referencecounting,
-TITLE="A Method for Overlapping and Erasure of Lists",
-AUTHOR="Collins, G.E.",
-JOURNAL="Communications of the ACM",
-VOLUME="3",
-ISSUE="12",
-YEAR="1960"}
+title={A method for overlapping and erasure of lists},
+  author={Collins, George E},
+  journal={Communications of the ACM},
+  volume={3},
+  number={12},
+  pages={655--657},
+  year={1960},
+  publisher={ACM}
+}
 
 @ARTICLE{copyingcollector,
-TITLE="List Processing in Real Time on a Serial Computer",
-AUTHOR="Baker, H.G.",
-JOURNAL="Communications of the ACM",
-VOLUME="21",
-ISSUE="4",
-YEAR="1978"}
+  title={List processing in real time on a serial computer},
+  author={Baker Jr, Henry G},
+  journal={Communications of the ACM},
+  volume={21},
+  number={4},
+  pages={280--294},
+  year={1978},
+  publisher={ACM}
+}
 
-@ARTICLE{writebarriers,
-TITLE="A comparative performance evaluation of write barrier implementations",
-AUTHOR="Hosking, A.L. and Moss, J.E.B., Stefanovic, D",
-YEAR="1992"
+@inproceedings{writebarriers,
+  title={A comparative performance evaluation of write barrier implementation},
+  author={Hosking, Antony L and Moss, J Eliot B and Stefanovic, Darko},
+  booktitle={ACM Sigplan Notices},
+  volume={27},
+  pages={92--109},
+  year={1992},
+  organization={ACM}
 }
 
 @BOOK{algorithms,
-TITLE="Introduction to Algorithms",
-AUTHOR="Cormen, T.H. and Leiserson, C.D. and Rivest, R.L. and Stein, C.",
-YEAR="2009",
-ISBN="978-0-262-53305-8",
-PUBLISHER="MIT Press"}
+  title={Introduction to algorithms},
+  author={Cormen, Thomas H},
+  year={2009},
+  publisher={MIT press}
+}
 
 @misc{boehmgc,
   title = "Boehm-Demers-Weiser conservative garbage collector",
   howpublished = {\url{http://www.hboehm.info/gc/}},
-  author="Boehm, H.J. and Demers, A.J. and Weiser, M.",
+  author="Boehm, Hans-J and Demers, Alan J and Weiser, Mark",
 }
 
 @misc{terms,
